<resources>
    <string name="app_name">PreApp</string>
    <string name="app_version">1.0.0</string>
    <string name="app_author">Credit : Bagas Dwi Anggoro</string>
    <string name="user">Bagas!</string>
    <string name="about"><b>Aplikasi</b> ini dibuat guna menjadi wadah untuk tugas mata kuliah Pemrograman Mobile Satu, pada Univesitas Sains dan Teknologi Komputer (STEKOM) tahun 2025 program studi Teknik Informatika.</string>
    <string name="subTitle">Daftar Tugas</string>
    <string name="widget.title.one">Tugas - 01</string>
    <string name="widget.title.two">Tugas - 02</string>
    <string name="widget.title.three">Tugas - 03</string>
    <string name="widget.title.four">Tugas - 04</string>
    <string name="widget.subject.one">Halo Dunia</string>
    <string name="widget.subject.two">Tombol Dengan Intent</string>
    <string name="widget.subject.three">Perhitungan Sederhana</string>
    <string name="widget.subject.four">Hello World</string>

    <string name="welcome">Selamat Datang di Universitas STEKOM</string>
    <string name="address">Jl. Majapahit No 605 Semarang\nTelp: 024–6170144, 024-7600452\nWebsite www.stekom.ac.id</string>
    <string name="nim">NIM : 1123100125</string>
    <string name="name">Nama : Bagas Dwi Anggoro</string>
    <string name="kelas">Kelas : TI-23</string>
    <string name="button">Check</string>
    <string name="label">Values</string>
    <string name="output">Hasil Value:</string>
    <string name="defaultValue">0</string>
</resources>